WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36982
[Chromium]: FindInPage issue with scrollbars not updated on frame pages
https://bugs.webkit.org/show_bug.cgi?id=36982
Summary
[Chromium]: FindInPage issue with scrollbars not updated on frame pages
Finnur Thorarinsson
Reported
2010-04-01 14:20:36 PDT
With Chromium, executing a FindInPage on multi-frame pages doesn't always update tickmarks on scrollbars for the subframes (sometimes it works, sometimes partially, sometimes not a all). There is a reduction here (
comment 23
):
http://code.google.com/p/chromium/issues/detail?id=13551#c23
Turns out the Invalidate function is calling invalidateRect on the View and is specifying a rect that's in window coordinates, whereas the invalidateRect expects frame coordinates. Patch coming.
Attachments
Proposed patch for fixing the paint problem
(1.93 KB, patch)
2010-04-01 14:26 PDT
,
Finnur Thorarinsson
no flags
Details
Formatted Diff
Diff
Now with style issue fixed
(1.93 KB, patch)
2010-04-01 14:33 PDT
,
Finnur Thorarinsson
no flags
Details
Formatted Diff
Diff
Changed CRLF to LF to appease the style gods :)
(1.93 KB, patch)
2010-04-01 14:46 PDT
,
Finnur Thorarinsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Finnur Thorarinsson
Comment 1
2010-04-01 14:26:17 PDT
Created
attachment 52335
[details]
Proposed patch for fixing the paint problem
WebKit Review Bot
Comment 2
2010-04-01 14:28:42 PDT
Attachment 52335
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/chromium/src/WebFrameImpl.cpp:1966: frame_rect is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebKit/chromium/src/WebFrameImpl.cpp:1977: frame_rect is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Finnur Thorarinsson
Comment 3
2010-04-01 14:33:20 PDT
Created
attachment 52336
[details]
Now with style issue fixed
WebKit Review Bot
Comment 4
2010-04-01 14:34:08 PDT
Attachment 52336
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/chromium/ChangeLog:5: One or more unexpected \r (^M) found; better to use only a \n [whitespace/carriage_return] [1] Suppressing further [whitespace/carriage_return] reports for this file. Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Finnur Thorarinsson
Comment 5
2010-04-01 14:46:09 PDT
Created
attachment 52341
[details]
Changed CRLF to LF to appease the style gods :)
Eric Seidel (no email)
Comment 6
2010-04-01 15:02:04 PDT
Comment on
attachment 52341
[details]
Changed CRLF to LF to appease the style gods :) I don't know what Chromium's policy on testing this sort of thing is. I assume a manual test would be possible, but I'm not sure there is an automated way to test this. Or maybe there is? I'm not the expert on this code, but this looks sane.
WebKit Commit Bot
Comment 7
2010-04-01 18:25:10 PDT
Comment on
attachment 52341
[details]
Changed CRLF to LF to appease the style gods :) Clearing flags on attachment: 52341 Committed
r56958
: <
http://trac.webkit.org/changeset/56958
>
WebKit Commit Bot
Comment 8
2010-04-01 18:25:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug