2010-04-01  Finnur Thorarinsson  <finnur.webkit@gmail.com>

Reviewed by Eric Seidel.

        [chromium] FindInPage on multi-frame pages wasn't always updating
        tickmarks on scrollbars for the subframes. It was calling invalidateRect
        on the View and specifying a rect that's in window coordinates, whereas
        the invalidateRect expects frame coordinates.

        https://bugs.webkit.org/show_bug.cgi?id=36982

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::invalidateArea):

Canonical link: https://commits.webkit.org/48251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56958 268f45cc-cd09-0410-ab3c-d52691b4dbfc