WebKit/chromium/src/WebFrameImpl.cpp
@@ -1963,6 +1963,8 @@ void WebFrameImpl::invalidateArea(AreaToInvalidate area)
         if ((area & InvalidateContentArea) == InvalidateContentArea) {
             IntRect contentArea(
                 view->x(), view->y(), view->visibleWidth(), view->visibleHeight());
+            IntRect frameRect = view->frameRect();
+            contentArea.move(-frameRect.topLeft().x(), -frameRect.topLeft().y());
             view->invalidateRect(contentArea);
         }
 
@@ -1972,6 +1974,8 @@ void WebFrameImpl::invalidateArea(AreaToInvalidate area)
                 view->x() + view->visibleWidth(), view->y(),
                 ScrollbarTheme::nativeTheme()->scrollbarThickness(),
                 view->visibleHeight());
+            IntRect frameRect = view->frameRect();
+            scrollBarVert.move(-frameRect.topLeft().x(), -frameRect.topLeft().y());
             view->invalidateRect(scrollBarVert);
         }
     }
